@@ -22,7 +22,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -122,7 +121,7 @@ public class CalibrationRotationPipeTest {
                                     0.09625562194891251,
                                     -0.1860797479660746
                                 }),
-                        new double[] {},
+                        new double[0],
                         List.of(),
                         new Size(),
                         1,
@@ -137,6 +136,8 @@ public class CalibrationRotationPipeTest {
 
         FrameStaticProperties rotatedFrameProps = frameProps.rotate(rot);
 
+        assertEquals(8, rotatedFrameProps.cameraCalibration.distCoeffs.data.length);
+        assertEquals(8, rotatedFrameProps.cameraCalibration.cameraIntrinsics.data.length);
         Point[] originalPoints = {new Point(100, 100), new Point(200, 200), new Point(300, 100)};
 
         // Distort the original points
@@ -150,13 +151,13 @@ public class CalibrationRotationPipeTest {
         var rotatedDistortedPoints =
                 distortedOriginalPoints.stream()
                         .map(it -> rot.rotatePoint(it, frameProps.imageWidth, frameProps.imageHeight))
-                        .collect(Collectors.toList());
+                        .toList();
 
         // Now let's instead rotate then distort
         var rotatedOriginalPoints =
                 Arrays.stream(originalPoints)
                         .map(it -> rot.rotatePoint(it, frameProps.imageWidth, frameProps.imageHeight))
-                        .collect(Collectors.toList());
+                        .toList();
 
         var distortedRotatedPoints =
                 OpenCVHelp.distortPoints(
@@ -200,7 +201,7 @@ public class CalibrationRotationPipeTest {
                                     0.04625562194891251,
                                     -0.0860797479660746
                                 }),
-                        new double[] {},
+                        new double[0],
                         List.of(),
                         new Size(),
                         1,
@@ -222,9 +223,7 @@ public class CalibrationRotationPipeTest {
         // rotate and try again
         var rotAngle = ImageRotationMode.DEG_90_CCW;
         var rotatedDistortedPoints =
-                distortedCorners.stream()
-                        .map(it -> rotAngle.rotatePoint(it, 1280, 720))
-                        .collect(Collectors.toList());
+                distortedCorners.stream().map(it -> rotAngle.rotatePoint(it, 1280, 720)).toList();
         pipe.setParams(
                 new SolvePNPPipeParams(
                         coeffs.rotateCoefficients(rotAngle), TargetModel.kAprilTag6p5in_36h11));
